Developing (#3)
* Refactoring DSL

* Updating readme

* Scaffolding Unit Tests

* Spiking

* Spiking

* Improving DSL

* Adding Tests

* Improving DSL

* Improving DSL

* Improving DSL

* Improving DSL

* Implementing Tests

* Improving Tests and DSL

* Implementing Tests

* Adding Maven Wrapper

* Fixing Travis

* Add Code Coverage Plugin

* Typing Asserts

* Increment Javadoc

* Updating Readme

* Updating Readme

* Implementing Fixtures + Dummies + Asserts

* Fixing Tests

* Refactoring

* Fixing Unit Tests

* Refactoring Interfaces

* Fixing Unit Tests - WIP

* Removing Pom Warnings

* Update GitIgnore

* Update GitIgnore

* Configure to deploy On Central.

* Fixing POM

* [maven-release-plugin] prepare release test-helper-0.1.1

* [maven-release-plugin] prepare for next development iteration

* Test Release Rollback

* [maven-release-plugin] prepare release test-helper-0.1.1

* Test Release Rollback

* [maven-release-plugin] prepare release test-helper-0.1.2

* [maven-release-plugin] prepare for next development iteration

* Configure to deploy On Central.

* Fixing Javadoc

* Fixing Javadoc